2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* deployment.cpp: Fix the build when not using OBJECT_TRACKING

2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* deployment.cpp: Add some more useful output to ReportLeaks
	  so we can see the number of leaked objects grouped by type.
	  We also now print out the leak report multiple times so we
	  can see the number of 'leaked' objects before disposing the
	  mono runtime and after disposing it. This allows us to
	  trivially see objects which have been kept alive longer than
	  they should've been.

2010-06-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-ffmpeg.cpp: Signal the wait_mutex too when shutting down the ffmpeg
	thread, fixes #97 when building with ffmpeg support.

2010-06-22  Andreia Gaita  <avidigal@novell.com>

	* network-curl.cpp: activate ssl soft check (host/ip only, no
	  local certificates yet)

2010-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (qtree_insert): Use qtree_new(). Also
	optimized to use a temporary variable to hold the value of pow2 of
	'level' so we didn't need to calculate it a dozen times per loop.

2010-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (qtree_set_image): Renamed from
	set_value(). The value is always a cairo_surface_t image.
	(qtree_lookup_image): Renamed from lookup_data().
	(qtree_has_image): Renamed from has_value().
	(timer macros): Fixed no-op macro names.
	(_qtree_next_sibling): Precalculate pow2 (l) so we don't have to
	calculate it multiple times in some of the conditions.

2010-06-21  Jeffrey Stedfast  <fejj@novell.com>

	* uielement.h (UIElement): Move the Right mouse button events to
	the public grouping.

2010-06-18  Chris Toshok  <toshok@ximian.com>

	* pal/gtk/config-dialog-gtk.h,cpp: add permissions dialog page.

	* moonlightconfiguration.h,cpp: add GetKeys and RemoveKey.

2010-06-18  Chris Toshok  <toshok@ximian.com>

	* pal/gtk/pal-gtk.cpp (MoonWindowingSystemGtk::ShowConsentDialog):